2001-02-11  Benjamin Chelf  <chelf@codesourcery.com>

	* qm/command_line.py (ErrorHandler): New method.
	(__init): Add output parameter.
	(ParseCommandLine): Fix bugs.
	
	* qm/track/qmtrack.py: New file.

2001-02-08  Alex Samuel  <samuel@codesourcery.com>

	Module zope-dtml is now part of this module.  Add configury to set
	up and use it.
	
	* configure.in (/usr/lib/python1.5/config/Makefile.pre.in): Check file.
	* configure: Regenerate.
	* Makefile.in (SUBDIRS): Add zope-dtml/ExtensionClass.
	(setup): Add zope-dtml/ExtensionClass/Makefile.
	(zope-dtml/ExtensionClass/Makefile): New rule.
	* standard.mk.in (PYTHON): Build PYTHONPATH.
	(PYTHONDIRS): New variable.

2001-01-09  Benjamin Chelf  <chelf@codesourcery.com>

	* qm/command_line.py: New file.

	* qm/test.py (test_parser_create): Define.
	(test_paresr_parse): Likewise.
	(test_parser_help): Likewise.
	(test_parser_duplicate_long): Likewise.
	(test_parser_duplicate_short): Likewise.
	(test_parser_two_char_short): Likewise.
	(test_parser_no_long): Likewise.
	(test_parser_dup_command_short): Likewise.
	(test_parser_dup_command_long): Likewise.
	(regession_tests): Add above tests.

2001-01-09  Alex Samuel  <samuel@codesourcery.com>

	* Makefile.in (PYTHONDOCDIRS): New variable.
	* standard.mk.in (doc-python): Build for PYTHONDOCDIRS only.

2001-01-09  Alex Samuel  <samuel@codesourcery.com>

	* README.sources: Clarify naming conventions.
	* templates/py: Add section banners.
	
	* configure.in: New file.
	* install-sh: Likewise.
	* configure: Likewise.
	* standard.mk.in: New file.
	* standard.mk: Remove.
	* Makefile.in: New file.
	* Makefile: Remove.
	* doc/Makefile.in: New file.
	* doc/Makefile: Remove.
	* doc/design/qmconfig/Makefile.in: New file.
	* doc/design/qmconfig/Makefile: Remove.
	* doc/design/qmtest/Makefile.in: New file.
	* doc/design/qmtest/Makefile: Remove.
	* doc/design/qmtrack/Makefile.in: New file.
	* doc/design/qmtrack/Makefile: Remove.
	
2001-01-09  Alex Samuel  <samuel@codesourcery.com>
